--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -17,3 +17,14 @@
     </div>
 <% end %>
 </div>
+
+<div class="container mx-auto px-6">
+  <h2 class="text-2xl md:text-3xl font-bold mb-4"><%= @company.name %></h2>
+  <p><strong>Total revenue</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Gross profit</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Net income</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Operational expenses</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Operational income</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Taxes</strong>: <%= (rand * 100).to_i  %></p>
+  <p><strong>Free Cash Flow (FCF)</strong>: <%= (rand * 100).to_i  %></p>
+</div>
