--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
   </head>
 
   <body class="bg-gray-100">
+    <section class="bg-blue-900 text-white py-20">
+      <div class="container mx-auto px-6">
+        <h1 class="text-4xl md:text-6xl font-bold mb-4">breakmybank</h1>
+        <p class="text-lg md:text-xl">
+          breakmybank parses 10-K/20-F statements and gives you an overview of the reports.
+        </p>
+      </div>
+    </section>
+
     <%= yield %>
   </body>
 </html>
